fix: make three promises match the behaviour behind them
All three are the residue of the review's second systemic theme — the
documentation says A, the code does B, and nothing says so at runtime.

domainEvents() promised "an unmodifiable snapshot" and returned an
unmodifiable VIEW of the live list, so a synchronous listener recording
another event mid-publication blew up with ConcurrentModificationException
from inside the publisher. The existing test was even called
returnsAnUnmodifiableSnapshot and only asserted the unmodifiable half, which
is how it survived; it now asserts the snapshot half too.

Copying is not the whole fix. publishAndClear published a snapshot and then
cleared everything, so a snapshot alone would have discarded whatever a
listener recorded during publication — a loud crash traded for a silently
dropped domain event, which is worse. So the primitive is drainDomainEvents():
take and empty in one step, leaving anything recorded afterwards visible on
the aggregate. And because the root is already persisted when publishAndClear
runs, an event recorded on that same aggregate announces a state change that
was never written, so it is refused with a message saying why rather than
published or dropped.

A failed command logged at DEBUG meant that under the default INFO threshold
it produced no line at all. Raising everything to WARN is the other wrong
answer, so the level follows the distinction the framework already draws in
its own words: DomainException and ApplicationException exist "so callers can
distinguish business-rule failures from technical faults", so a rejection is
INFO with its message and no stack, and anything else is WARN with the
exception. Matched by type, never by class name. This interceptor is the only
place that sees every command whatever dispatched it.

The catch-all 500 handler built a ProblemDetail and logged nothing, so a
production NPE left a 500 in the access log and no stack to debug from. It
now logs the exception and 